.opsera-ffbb1/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-ffbb1-dev
  labels:
    app: ffbb1
    tenant: opsera
    environment: dev
    managed-by: opsera-c2c
