.opsera-ffbb1/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ffbb1
  namespace: opsera-ffbb1-dev
  labels:
    app: ffbb1
    tenant: opsera
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ffbb1-dev.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ffbb1
                port:
                  number: 80
